Fix an issue where notes were unreadable/hard to read across the themes

--- a/display/shared/styling/themes/base-theme.less
+++ b/display/shared/styling/themes/base-theme.less
@@ -92,6 +92,11 @@
   color: #000000ab;
 }
 
+form .notes,
+form .hint {
+  color: var(--system-color-5);
+}
+
 .window-content {
   box-shadow: 0 0 5px var(--system-color-1);
 
