--- a/display/shared/styling/themes/dark-theme.less
+++ b/display/shared/styling/themes/dark-theme.less
@@ -113,6 +113,11 @@
     ::placeholder {
       color: var(--system-dark-color-5);
     }
+
+    form .notes,
+    form .hint {
+      color: var(--system-dark-color-4);
+    }
   }
 
   .situational-modifiers {
