--- a/display/shared/styling/themes/werewolf-theme.less
+++ b/display/shared/styling/themes/werewolf-theme.less
@@ -116,6 +116,11 @@
     ::placeholder {
       color: var(--system-dark-color-5);
     }
+
+    form .notes,
+    form .hint {
+      color: var(--system-dark-color-4);
+    }
   }
 
   .situational-modifiers {
